# rusty

./: .gitignore  Cargo.toml  README.md
src/: colors.rs  commands.rs  emojis.rs  main.rs
src/commands/: music.rs  utility.rs
