[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.poise]
version = "0.6.1"
default-features = false
features = ["cache", "chrono", "handle_panics"]

[dependencies.songbird]
version = "0.4"
default-features = false
features = ["gateway", "serenity", "native"]

[dependencies.tokio]
version = "1.39.2"
features = ["rt-multi-thread", "macros"]

[dependencies.lavalink-rs]
version = "0.13"
default-features = false
features = ["songbird", "serenity", "native-tls", "macros"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[env]
LAVALINK_PASSWORD = "youshallnotpass!"
